# bacli

./: Cargo.toml  README.md  cliff.toml  dist-workspace.toml  justfile
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yml
crates/bacli/: Cargo.toml
crates/bacli/src/: config.rs  info.rs  main.rs  models.rs  restart.rs
crates/bacli/src/commands/: alias.rs  info.rs  list.rs  mod.rs  restart.rs  scan.rs  update_settings.rs  upgrade.rs
crates/bitaxe_api/: Cargo.toml  README.md
crates/bitaxe_api/src/: client.rs  lib.rs  models.rs  serde_utils.rs
