[package]
authors = ["w3irdrobot <dro@w3ird.tech>"]
description = "A wrapper around the Bitaxe API, enabling the management of a Bitaxe device in an easy to use way."
edition = "2021"
homepage = "https://github.com/w3ird-tech/bacli"
license = "	AGPL-3.0-only"
name = "bacli"
repository = "https://github.com/w3ird-tech/bacli"
version = "0.4.1"

[dependencies]
anyhow = "1.0.94"
bitaxe_api = { version = "0.2.1", path = "../bitaxe_api", default-features = false, features = [
  "rustls",
  "clap",
] }
clap = { version = "4.5.22", features = ["derive"] }
comfy-table = "7.1.3"
config = { version = "0.15.6", default-features = false, features = [
  "async",
  "convert-case",
  "yaml",
] }
directories = "6.0.0"
env_logger = "0.11.5"
futures = "0.3.31"
humantime = "2.1.0"
ipnetwork = "0.21.1"
log = "0.4.25"
reqwest = "0.12.12"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.11.0"
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["fs", "macros", "rt-multi-thread"] }
