[package]
authors     = ["w3irdrobot <dro@w3ird.tech>"]
description = "A wrapper around the Bitaxe API, enabling the management of a Bitaxe device in an easy to use way."
edition     = "2021"
homepage    = "https://github.com/w3ird-tech/bacli"
license     = "	AGPL-3.0-only"
name        = "bacli"
repository  = "https://github.com/w3ird-tech/bacli"
version     = "0.7.0"

[dependencies]
anyhow = "1.0.102"
bitaxe_api = { version = "0.5.1", path = "../bitaxe_api", default-features = false, features = [
  "clap",
  "rustls",
] }
clap = { version = "4.5.60", features = ["derive"] }
comfy-table = "7.2.2"
config = { version = "0.15.19", default-features = false, features = [
  "async",
  "convert-case",
  "yaml",
] }
directories = "6.0.0"
env_logger = "0.11.5"
futures = "0.3.32"
humantime = "2.3.0"
ipnetwork = "0.21.1"
log = "0.4.29"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread"] }
