[package]
authors     = ["w3irdrobot <dro@w3ird.tech>"]
description = "Crate for interacting with the Bitaxe API."
edition     = "2021"
homepage    = "https://github.com/w3ird-tech/bacli"
license     = "	AGPL-3.0-only"
name        = "bitaxe_api"
repository  = "https://github.com/w3ird-tech/bacli"
version     = "0.5.1"

[dependencies]
clap = { version = "4.5.60", optional = true }
log = "0.4.29"
reqwest = { version = "0.13.2", default-features = false, features = [
  "charset",
  "http2",
  "json",
  "system-proxy",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
serde_with = "3.16.1"
thiserror = "2.0.18"

[features]
clap    = ["dep:clap"]
default = ["rustls"]
openssl = ["reqwest/native-tls"]
rustls  = ["reqwest/rustls"]

[dev-dependencies]
serde_json = "1.0.149"
